--- a/ask_ai.html
+++ b/ask_ai.html
@@ -96,18 +96,14 @@
   </style>
 </head>
 <body>
-  <div class="button-container">
-      <a href="index.html" class="nav-button">HOME</a>
-      <a href="about.html" class="nav-button">ABOUT</a>
-      <a href="future.html" class="nav-button">FUTURE</a>
-      <a href="Space_invaders.html" class="nav-button">INVADERS</a>
-      <a href="podcast.html" class="nav-button">PODCAST</a>
-      <a href="badge.html" class="nav-button">BADGE</a>
-      <a href="prompt_optimiser.html" class="nav-button">PROMPT OPTIMIZER</a>
-      <a href="ask_ai.html" class="nav-button">ASK AI</a>
-      <a href="contact.html" class="nav-button">CONTACT</a>
-  </div>
-
+  <div id="navbar-placeholder"></div>
+  <script>
+      fetch('nav.html') // Richiede il file nav.html che contiene il menu
+          .then(response => response.text()) // Converte la risposta in testo
+          .then(data => {
+              document.getElementById('navbar-placeholder').innerHTML = data; // Inserisce il contenuto del menu nel placeholder
+          });
+  </script>
   <div class="ai-chat-container">
     <h1>Ask Anything to Nik Tesla AI</h1>
     <label for="userQuestion">Your Question:</label>
