--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,148 @@
-<script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - Nik Tesla AI</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script>
+    <script src="sketch.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <style>
+        /* Stili specifici per la pagina Contact */
+        .page-content {
+            z-index: 10;
+            position: relative;
+            max-width: 600px;
+            width: 90%;
+            margin: 80px auto 20px auto;
+            background-color: rgba(20, 20, 30, 0.8);
+            padding: 25px;
+            border-radius: 8px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+            color: #fff;
+            text-align: left; /* Per allineare il testo del form */
+        }
+
+        .page-content h1 {
+            text-align: center;
+            margin-top: 0;
+            color: rgba(200, 200, 255, 1);
+            margin-bottom: 30px;
+        }
+
+        .contact-form label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+            color: rgba(255, 255, 255, 0.9);
+        }
+
+        .contact-form input[type="text"],
+        .contact-form input[type="email"],
+        .contact-form textarea {
+            width: calc(100% - 20px); /* Larghezza completa meno il padding */
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid rgba(200, 200, 255, 0.3);
+            border-radius: 4px;
+            background-color: rgba(0, 0, 0, 0.3);
+            color: #fff;
+            box-sizing: border-box; /* Assicura che padding e border siano inclusi nella larghezza */
+        }
+
+        .contact-form textarea {
+            resize: vertical; /* Permette il ridimensionamento verticale */
+            min-height: 100px;
+        }
+
+        .contact-form button {
+            background-color: #007bff;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.1em;
+            transition: background-color 0.3s ease;
+            display: block; /* Per centrare il pulsante se si desidera */
+            margin: 0 auto; /* Centra il pulsante */
+        }
+
+        .contact-form button:hover {
+            background-color: #0056b3;
+        }
+
+        .contact-form button:disabled {
+            background-color: #cccccc;
+            cursor: not-allowed;
+        }
+
+        .status-message {
+            margin-top: 20px;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .status-success {
+            background-color: #d4edda;
+            color: #155724;
+            border-color: #c3e6cb;
+        }
+
+        .status-error {
+            background-color: #f8d7da;
+            color: #721c24;
+            border-color: #f5c6cb;
+        }
+
+        /* Media Query per la responsività */
+        @media (max-width: 600px) {
+            .page-content {
+                margin-top: 60px;
+                padding: 15px;
+            }
+            .contact-form input[type="text"],
+            .contact-form input[type="email"],
+            .contact-form textarea {
+                width: 100%; /* Rimuovi il calc() per schermi piccoli */
+            }
+        }
+
+    </style>
+</head>
+<body>
+    <div id="navbar-placeholder"></div>
+    <script>
+        fetch('nav.html') // Richiede il file nav.html che contiene il menu
+            .then(response => response.text()) // Converte la risposta in testo
+            .then(data => {
+                document.getElementById('navbar-placeholder').innerHTML = data; // Inserisce il contenuto del menu nel placeholder
+            });
+    </script>
+    <div class="page-content">
+        <h1>Contact Me</h1>
+        <form id="contactForm" class="contact-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject">
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="6" required></textarea>
+
+            <button type="submit">Send Message</button>
+            <div id="formStatusMessage" class="status-message"></div>
+        </form>
+    </div>
+
+    <script>
         document.addEventListener('DOMContentLoaded', () => {
             const contactForm = document.getElementById('contactForm');
             const formStatusMessage = document.getElementById('formStatusMessage');
@@ -64,8 +208,7 @@
                     }
 
                 } catch (error) {
-                    // Gestisce errori di rete o altri errori durante l'esecuzione dello script
-                    console.error('Errore durante l\'invio del form:', error);
+                    console.error('Error communicating with Supabase service:', error);
                     formStatusMessage.textContent = `Error: ${error.message || 'Could not send message.'}`; // Messaggio di errore in inglese
                     formStatusMessage.className = 'status-message status-error'; // Applica classe per lo stile
                 } finally {
@@ -75,3 +218,5 @@
             });
         });
     </script>
+</body>
+</html>
