--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,12 @@
             border-color: #f5c6cb;
         }
 
+        .status-warning {
+            background-color: #fff3cd;
+            color: #856404;
+            border-color: #ffeeba;
+        }
+
         /* Media Query per la responsività */
         @media (max-width: 600px) {
             .page-content {
@@ -146,77 +152,4 @@
         document.addEventListener('DOMContentLoaded', () => {
             const contactForm = document.getElementById('contactForm');
             const formStatusMessage = document.getElementById('formStatusMessage');
-            const submitButton = contactForm.querySelector('button[type="submit"]'); // Trova il bottone di submit
-
-            // *** CONFIGURA QUESTI VALORI CON I TUOI DATI SUPABASE ***
-            const SUPABASE_URL = 'https://ppmymwdjdvcsrfawpeqi.supabase.co'; // <-- Incolla qui il tuo Project URL di Supabase
-            const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBwbXltd2RqZHZjc3JmYXdwZXFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDc0NzUxOTMsImV4cCI6MjA2MzA1MTE5M30.MTjtLfYQv-ztDg1t4YZQmqwrPKzfTKyY0CPWKTEEKrc'; // <-- Incolla qui la tua chiave 'anon' public di Supabase
-            const SUPABASE_TABLE_NAME = 'contact_messages'; // <-- Assicurati che questo sia il nome esatto della tua tabella
-            // ******************************************************
-
-            // Inizializza il client Supabase
-            const supabase = Supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-
-            // Controlla che gli elementi HTML necessari esistano
-            if (!contactForm || !formStatusMessage || !submitButton) {
-                console.error("Elementi HTML per il form di contatto non trovati. La funzionalità di invio non sarà attiva.");
-                return; // Esci dalla funzione se non trovi gli elementi
-            }
-
-
-            // Aggiungi un ascoltatore per l'evento 'submit' del form
-            contactForm.addEventListener('submit', async (event) => {
-                // Impedisci l'invio standard del form che causerebbe il ricaricamento della pagina
-                event.preventDefault();
-
-                // Resetta il messaggio di stato
-                formStatusMessage.textContent = '';
-                formStatusMessage.className = ''; // Rimuovi classi di stato precedenti
-
-                // Raccogli i dati del form
-                const formData = new FormData(contactForm);
-                // Converti FormData in un oggetto per Supabase
-                const formDataObject = {};
-                formData.forEach((value, key) => {
-                     // Per ora, escludiamo i file dall'oggetto dati inviato a Supabase
-                     if (key !== 'files') {
-                        formDataObject[key] = value;
-                     }
-                });
-
-                // Mostra un messaggio di caricamento e disabilita il bottone
-                submitButton.textContent = 'Sending...'; // Testo bottone in inglese
-                submitButton.disabled = true;
-
-                try {
-                    // Invia i dati a Supabase
-                    const { data, error } = await supabase
-                        .from(SUPABASE_TABLE_NAME) // Specifica la tabella
-                        .insert([formDataObject]); // Inserisci l'oggetto dati (come array con un elemento)
-
-                    if (error) {
-                        // Se Supabase restituisce un errore
-                        console.error('Errore Supabase:', error);
-                        formStatusMessage.textContent = `Error sending message: ${error.message}`; // Messaggio di errore in inglese
-                        formStatusMessage.className = 'status-message status-error'; // Applica classe per lo stile
-                    } else {
-                        // Se l'invio a Supabase è riuscito
-                        console.log('Messaggio inviato con successo a Supabase:', data);
-                        formStatusMessage.textContent = 'Message sent successfully!'; // Messaggio di successo in inglese
-                        formStatusMessage.className = 'status-message status-success'; // Applica classe per lo stile
-                        contactForm.reset(); // Svuota il form
-                    }
-
-                } catch (error) {
-                    console.error('Error communicating with Supabase service:', error);
-                    formStatusMessage.textContent = `Error: ${error.message || 'Could not send message.'}`; // Messaggio di errore in inglese
-                    formStatusMessage.className = 'status-message status-error'; // Applica classe per lo stile
-                } finally {
-                    submitButton.textContent = 'Send Message'; // Ripristina il testo del bottone in inglese
-                    submitButton.disabled = false; // Riabilita il bottone
-                }
-            });
-        });
-    </script>
-</body>
-</html>
+            const submitButton = contactForm
