Rinominato prompt_optimizer.html a prompt_optimiser.html per uniformità con nav.html

--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
     <a href="Space_invaders.html" class="nav-button">INVADERS</a>
     <a href="podcast.html" class="nav-button">PODCAST</a>
     <a href="badge.html" class="nav-button">BADGE</a>
-    <a href="prompt_optimiser.html" class="nav-button">PROMPT OPTIMIZER</a>
+    <a href="prompt_optimizer.html" class="nav-button">PROMPT OPTIMIZER</a>
     <a href="ask_ai.html" class="nav-button">ASK AI</a>
     <a href="contact.html" class="nav-button">CONTACT</a>
 </div>
